--- a/templates/result.html
+++ b/templates/result.html
@@ -9,15 +9,17 @@
     <h1>Результаты оценки погодных условий</h1>
     <h2>Начальный город: {{ result.start_city.name }}</h2>
     <p>Погода: {{ result.start_city.bad_weather }}</p>
-    <p>Температура: {{ result.start_city.weather.temperature }}°C</p>
-    <p>Скорость ветра: {{ result.start_city.weather.wind_speed }}</p>
-    <p>Вероятность осадков: {{ result.start_city.weather.precipitation }}%</p>
+    <p>Температура: {{ result.start_city.weather.temperature }}(°C)</p>
+    <p>Скорость ветра: {{ result.start_city.weather.wind_speed }}(м/с)</p>
+    <p>Вероятность осадков: {{ result.start_city.weather.precipitation }}(%)</p>
+    <p>Влажность: {{ result.start_city.weather.humidity }}(%)</p>
 
     <h2>Конечный город: {{ result.end_city.name }}</h2>
     <p>Погода: {{ result.end_city.bad_weather }}</p>
-    <p>Температура: {{ result.end_city.weather.temperature }}°C</p>
-    <p>Скорость ветра: {{ result.end_city.weather.wind_speed }}</p>
-    <p>Вероятность осадков: {{ result.end_city.weather.precipitation }}%</p>
+    <p>Температура: {{ result.end_city.weather.temperature }}(°C)</p>
+    <p>Скорость ветра: {{ result.end_city.weather.wind_speed }}(м/с)</p>
+    <p>Вероятность осадков: {{ result.end_city.weather.precipitation }}(%)</p>
+    <p>Влажность: {{ result.end_city.weather.humidity }}(%)</p>
 
     <a href="/">Вернуться назад</a>
 </body>
